fix(work): grid alignment (#78)

--- a/styles/includes/_work.scss
+++ b/styles/includes/_work.scss
@@ -1,7 +1,6 @@
 .work {
-	display: inline-block;
+	overflow-y: auto;
 	position: relative;
-	margin-top: 16rem;
 
 	&::after {
 		@include dotted-grid();
